fixing modal on iphone

--- a/PredictionUI/Views/Client/Layout/css/style.css
+++ b/PredictionUI/Views/Client/Layout/css/style.css
@@ -546,7 +546,7 @@ option , select{
     position: fixed;
     top: 0;
     width: 100%!important;
-    z-index: 99;
+    /*z-index: 99;*/
     margin-top: 0;
     left: 0;
     right: 0;
